# iniparser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  iniparser.sln
Test/: Test.vcxproj  Test.vcxproj.filters  catch2.runsettings  test.cpp  test2.cpp
cmake/: iniparserConfig.cmake.in
include/iniparser/: iniparser.hpp
iniparser/: example.cpp  iniparser.hpp  iniparser.vcxproj  iniparser.vcxproj.filters
resources/: example.ini
tests/: CMakeLists.txt  test.cpp  test2.cpp
tests/resources/: created.ini  example.ini
